--- a/bin/style.css
+++ b/bin/style.css
@@ -1,3 +1,5 @@
+/* FONTS */
+
 @font-face {
 	font-family: 'Dosis';
 	src: url('fonts/Dosis-SemiBold.ttf');
@@ -7,6 +9,8 @@
 	font-family: 'OpenSans';
 	src: url('fonts/OpenSans-SemiBold.ttf');
 }
+
+/* GLOBAL */
 
 * {
 	padding: 0;
@@ -40,10 +44,88 @@ p {
 	font-weight: 200;
 }
 
+input {
+	font-family: OpenSans;
+	padding: 6px 8px;
+	background-color: #E0E2EB;
+	color: #32343C;
+	border-color: #32343C;
+	border-radius: 2px;
+	height: 24px;
+}
+
+input:focus {
+	background-color: white;
+}
+
+select {
+	font-family: OpenSans;
+	padding: 6px 8px;
+	background-color: #E0E2EB;
+	color: #32343C;
+	border-color: #32343C;
+	border-radius: 2px;
+	height: 24px;
+}
+
+select:focus {
+	background-color: white;
+}
+
+button {
+	font-family: OpenSans;
+	color: white;
+	background-color: #757989;
+	text-align: center;
+	vertical-align: middle;
+	height: 32px;
+	border-color: #32343C;
+	border-radius: 2px;
+}
+
+button:disabled {
+	background-color: #5A5E6B;
+	color: #757989;
+}
+
+button:hover:enabled {
+	background-color: #C1C5D2;
+	transition: 200ms;
+}
+
+button.red:enabled {
+	background-color:rgba(233, 48, 79, 0.25);
+}
+
+button.red:hover:enabled {
+	background-color:rgba(233, 48, 79, 1);
+}
+
+::-webkit-scrollbar {
+	width: 10px;
+}
+
+::-webkit-scrollbar-track {
+	background-color: #32343C;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: #757989;
+	border: 1px solid #32343C;
+	border-radius: 2px;
+}
+
+::-webkit-scrollbar-corner {
+	background-color: #32343C;
+}
+
+/* DIVS */
+
 .container {
 	display: flex;
 	flex-direction: column;
 	min-height: 100vh;
+	max-height: 100vh;
 }
 
 .panel {
@@ -53,6 +135,7 @@ p {
 	padding: 8px 16px;
 	min-height: 32px;
 	width: 100%;
+	color: #C1C5D2;
 }
 
 .panel h1 {
@@ -90,12 +173,13 @@ p {
 
 .workspace {
 	flex: 1;
-	display: inline-block;
+	display: flex;
 	min-height: 100%;
 	background-color: #757989;
 	border: 1px solid #32343C;
 	border-radius: 4px;
 	padding: 8px 16px;
+	overflow: auto;
 }
 
 .header {
@@ -122,14 +206,6 @@ p {
 	overflow-y: auto;
 }
 
-.h224 {
-	max-height: 224px;
-}
-
-.h320 {
-	max-height: 320px;
-}
-
 .h_m80 {
 	min-height: calc(100% - 80px);
 	max-height: calc(100% - 80px);
@@ -148,24 +224,22 @@ p {
 	opacity: 1;
 }
 
-.add_btn {
+.btn {
 	opacity: 0.5;
+}
+
+.btn:hover {
+	opacity: 1;
+}
+
+.btn_tr {
 	float: right;
 	margin: -20px -8px 0 0;
 }
 
-.add_btn:hover {
-	opacity: 1;
-}
-
-.delete_btn {
-	opacity: 0.5;
-    float: left;
-    margin-top: 10px;
-}
-
-.delete_btn:hover {
-	opacity: 1;
+.btn_bl {
+	float: left;
+	margin-top: 10px;
 }
 
 .window_panel {
@@ -182,7 +256,7 @@ p {
 
 .layer_panel {
 	min-height: 32px;
-    padding: 6px;
+    padding: 6px 12px;
 }
 
 .layer_icon {
@@ -206,27 +280,59 @@ p {
     float: left;
 }
 
-.levels {
-	max-height: calc(100vh - 384px);
+.full_width {
+	width: 100%;
 }
 
-/* width */
-::-webkit-scrollbar {
-	width: 10px;
+.modal {
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	background-color: rgba(0,0,0,0.4);
 }
 
-/* Track */
-::-webkit-scrollbar-track {
-	background-color: #32343C;
+.modal_content {
+	position: absolute;
+	margin: auto;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	box-shadow: 0 0 40px rgba(0, 0, 0, 0.4);
 }
 
-/* Handle */
-::-webkit-scrollbar-thumb {
-	background-color: #757989;
-	border: 1px solid #32343C;
-	border-radius: 2px;
+.workspace_tile_container {
+	border: 2px solid #C1C5D2;
+	overflow: hidden;
+	margin: auto;
+	box-sizing: content-box;
 }
 
-::-webkit-scrollbar-corner {
-	background-color: #32343C;
+.workspace_row {
+	display: flex;
+	flex-direction: row;
+}
+
+.workspace_tile {
+	float:left;
+	border-top: 0.5px dashed rgba(193, 197, 210, 0.25);
+	border-left: 0.5px dashed rgba(193, 197, 210, 0.25);
+	border-right: 0.5px dashed rgba(193, 197, 210, 0.5);
+	border-bottom: 0.5px dashed rgba(193, 197, 210, 0.5);
+	margin: 0;
+}
+
+/* BY ID */
+
+#layers {
+	max-height: 320px;
+}
+
+#tile_selection_window {
+	height: calc(100% - 128px);
+	overflow: auto;
 }
